Fix the nav bar on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -395,8 +395,9 @@ section {
     /* Day Planner/Schedule Section */
     .day-planner {
       font-size: 14px;
-      width: 64.75%;
-      height: 340px;
+      width: 64%;
+      height: 317px;
+      margin-top: -22px;
       overflow: auto;
       background-color: white;
       box-shadow: 3px 3px 5px -4px rgba(0,0,0,0.75);
@@ -536,5 +537,49 @@ section {
     .col-7 { width: 6.5%; }
     .col-8 { width: 20.5%; }
   }
+
+}
+
+@media all and (max-width: 600px) and (min-width: 320px) {
+  header {
+    nav {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+
+      .btm-menu { flex: 5.5; }
+    }
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+
+    .top-container {
+      display: flex;
+      flex-direction: column;
+      align-self: flex-start;
+      height: 700px;
+
+      aside {
+        display: block;
+        width: 360px;
+        height: auto;
+        padding-bottom: 30px;
+        margin-left: -140px;
+      }
+
+      .day-planner {
+        width: 90%;
+        margin-top: 30px;
+        margin-left: -50px;
+        overflow-y: auto;
+        overflow-x: hidden;
+      }
+  }
+  }
+
 
 }
